2009-05-13  Maynard Johnson  <maynardj@us.ibm.com>

	* utils/opcontrol: Fix for session-dir setup, bug report 2646398

2009-05-13  Brian Bloniarz  <bmb@athenacr.com>

	* utils/opcontrol: Replace bash built-in let with posix statements

2009-05-07  Andi Kleen  <ak@linux.intel.com>
	* utils/ophelp.c:
	* libop/op_cpu_type.c:
	* libop/op_cpu_type.h:
	* libop/op_events.c:
	* libop/op_hw_specific.h: Add workaround_nehalem_aaj79
	* events/Makefile.am:
	* events/i386/atom/events: Add Atom support (New file)
	* events/i386/atom/unit_masks: Add Atom support (New file)
	* events/i386/nehalem/events: Add Nehalem support (New file)
	* events/i386/nehalem/unit_masks: Add Nehalem support (New file)
	* events/i386/core_i7/events: Add Core i7 support (New file)
	* events/i386/core_i7/unit_masks: Add Core i7 support (New file)

2009-05-07  Maynard Johnson  <maynardj@us.ibm.com>

	* oprof-compat/events/Makefile.am:
	* oprof-compat/events/ppc64/ibm-compat-v1/event_mappings: (new)
	* oprof-compat/events/ppc64/ibm-compat-v1/events: (new)
	* oprof-compat/events/ppc64/ibm-compat-v1/unit_masks: (new)
	* oprof-compat/libop/op_cpu_type.c:
	* oprof-compat/libop/op_cpu_type.h:
	* oprof-compat/libop/op_events.c:
	* oprof-compat/utils/ophelp.c:  Add support for IBM ppc64 architected events

2009-05-06  Andi Kleen  <ak@linux.intel.com>

	* utils/ophelp.c: Use word wrap to output event descriptions

2009-05-01  Andi Kleen  <ak@linux.intel.com>

	* events/i386/arch_perfmon/events: Update event names to conform to manual.

2009-05-01  Maynard Johnson  <maynardj@us.ibm.com>

	* configure.in:
	* m4/binutils.m4: Workaround to make oprofile build on recent SUSE

2009-04-29  Andi Kleen  <ak@linux.intel.com>

	* libop/op_events.c: Add support for include and unit mask merging
	  statements in event files

2009-04-29  Andi Kleen  <ak@linux.intel.com>

	* libop/op_events.c: Allow make check to accumulate some errors
	  before exiting

2009-04-28  Maynard Johnson  <maynardj@us.ibm.com>
